# rust-web-template

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  cliff.toml
app/: Cargo.toml
app/src/: lib.rs  main.rs
common/: Cargo.toml
common/src/: constants.rs  error.rs  lib.rs  page_reponse.rs  page_reqest.rs  response.rs  sql_build.rs  sql_builder.rs
common/src/models/: dict.rs  mod.rs  sys_user_online.rs
common/src/utils/: time.rs
config/: dev.toml  test.toml
framework/: Cargo.toml
framework/src/: config.rs  db.rs  jwt.rs  lib.rs  log.rs  midddleware.rs
modules/monitor/: Cargo.toml
modules/monitor/src/: lib.rs
modules/monitor/src/login_info/: handle.rs  model.rs  router.rs  service.rs
modules/monitor/src/operlog/: handle.rs  model.rs  router.rs  service.rs
modules/system/: Cargo.toml
modules/system/src/: handle.rs  lib.rs  model.rs
modules/system/src/dict/: handle.rs  mod.rs  model.rs  router.rs  service.rs
modules/system/src/file/: handle.rs  mod.rs  router.rs
modules/system/src/menu/: handle.rs  mod.rs  model.rs  router.rs  service.rs
modules/system/src/role/: handle.rs  model.rs  router.rs  service.rs
modules/system/src/user/: handle.rs  mod.rs  model.rs  router.rs  service.rs
sql/: system.sql
static/: index.html
uploads/: 水利研究院漏扫.rar  浪潮系统访问路径.xlsx  王多聪-廉洁家书回执表(新).docx
