[package]
name = "rust-web-template"
version = "0.1.0"
edition = "2021"


[workspace]
members = [ "app","common", "framework", "modules", "modules/system"]

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }
config = { version = "0.15.15", features = ["toml"] }
serde = { version = "1.0.219", features = ["derive"] }
jsonwebtoken = "9.3.1"
serde_json = "1.0.143"
anyhow = "1.0.99"
tracing = "0.1.41"
time= {version ="0.3.11", features = ["serde", "formatting", "local-offset"]}
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
axum = {version ="0.8.4", features = [
   "http2",
   "query",
   "tracing",
   "multipart",
    "macros",
] }
sqlx = { version = "0.8.6", features = [
    "time",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "uuid"
] }

[dependencies]
moka = { version = "0.12.10", features = ["future"] }
