[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
framework = { path = "../framework" }
system = {path = "../modules/system"}
# 从 workspace 继承
tokio = { workspace = true }
tracing = { workspace = true }
salvo ={ workspace = true }
serde = { workspace = true }
serde_json = {workspace = true}
sqlx = {workspace = true}
# 缓存
moka = { workspace = true }
