[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
config = { workspace = true }
jsonwebtoken = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true}
time = { workspace = true}
thiserror = "2.0.16"
strum = { version = "0.27", features = ["derive"] }


[dev-dependencies]
anyhow = {workspace =true}
