[package]
name = "system"
version = "0.1.0"
edition = "2024"

[dependencies]
serde= { workspace = true }
sqlx={workspace = true}
serde_json = { workspace = true }
salvo = { workspace = true }
time ={workspace =true }
tracing={workspace = true}
tokio = {workspace = true}
common = { path = "../../common" }
framework = { path = "../../framework" }
